# typomania

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml  release.yml
benches/: checks.rs  popular-crates.txt
src/checks/: bitflips.rs  homoglyph.rs  keyboard.rs  mod.rs  omitted.rs  repeated.rs  swapped.rs  testutil.rs  typos.rs  util.rs  version.rs
