[package]
name = "typomania"
version = "0.1.2"
edition = "2021"
description = " A toolbox to check for typosquatting in package registries"
keywords = ["typosquatting", "typosquat", "typogard"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustfoundation/typomania"
rust-version = "1.56.1"

[dependencies]
bitflip = "0.1.0"
itertools = "0.14.0"
rayon = { version = "1.7.0", optional = true }
thiserror = "2.0.0"
tracing = "0.1.37"

[features]
default = ["rayon"]
rayon = ["dep:rayon"]

[dev-dependencies]
clap = { version = "=4.6.1", features = ["derive"] }
criterion = "=0.8.2"
proptest = "=1.11.0"

[[example]]
name = "registry"
path = "examples/registry.rs"
required-features = ["rayon"]

[[bench]]
name = "checks"
harness = false
